--- a/src/ui/css/themes/darker.css
+++ b/src/ui/css/themes/darker.css
@@ -1,12 +1,12 @@
 :root {
   --base-color: #303641 !important;
-  --baseSecond-color: #252a32 !important;
+  --baseSecond-color: #FBFBFB !important;
   --sidebar-color: #252a32 !important;
   --base-brighter-color: #252a32 !important;
   --base-invert-color: #DADADA !important;
-  --text-color: #EBEBEB !important;
+  --text-color: #303641 !important;
   --textSecond-color: #FFF !important;
-  --textThird-color: #EBEBEB !important;
+  --textThird-color: #FFF !important;
   --border-color: #464e5e !important;
   --borderSecond-color: #464e5e !important;
   --shadow-color: #464e5e !important;
