--- a/src/ui/css/index.css
+++ b/src/ui/css/index.css
@@ -5,7 +5,7 @@ html, body {
 body {
   display: flex;
   flex-direction: row;
-  background: var(--base-bright-color);
+  background: var(--baseSecond-color);
 }
 
 /**
@@ -17,6 +17,7 @@ body {
   flex-direction: column;
   height: 100%;
   padding: 0 0 0 30px;
+  background: var(--sidebar-color);
 }
 
 #Sidebar > h1 {
@@ -49,7 +50,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--base-invert-bright-color);
+  color: var(--textThird-color);
   text-decoration: none;
   font-size: 18px;
   cursor: pointer;
