--- a/src/ui/css/content.css
+++ b/src/ui/css/content.css
@@ -14,7 +14,7 @@ main {
 h1 {
   padding-bottom: 10px;
   margin-bottom: 20px;
-  border-bottom: 1px solid var(--sectionLine-color);
+  border-bottom: 1px solid var(--borderSecond-color);
   font-size: 22px;
   font-weight: normal;
 }
