--- a/src/ui/css/themes/dark.css
+++ b/src/ui/css/themes/dark.css
@@ -10,6 +10,7 @@
   --border-color: #464e5e !important;
   --borderSecond-color: #464e5e !important;
   --shadow-color: #464e5e !important;
+  --shadowSecond-color: #252a32 !important;
   --highlighted-color: #00AAA0 !important;
   --highlighted-dark-color: #00726b !important;
   --warning-color: #FF6347 !important;
