replaced old font for the new one

--- a/src/lib/css/gestureIndicator.css
+++ b/src/lib/css/gestureIndicator.css
@@ -6,8 +6,8 @@
 }
 
 @font-face {
-  font-family: "Orkney Regular";
-  src: url("../../res/fonts/Orkney_Regular.woff");
+  font-family: "NunitoSans Regular";
+  src: url("../../res/fonts/NunitoSans-Regular.woff");
   font-weight: normal;
   font-style: normal;
 }
