--- a/src/ui/css/modules/overlay.css
+++ b/src/ui/css/modules/overlay.css
@@ -1,25 +1,8 @@
-:root {
-  --base-color: #FFF !important;
-  --baseSecond-color: #FBFBFB !important;
-  --sidebar-color: #FBFBFB !important;
-  --base-brighter-color: #fafafc !important;
-  --base-invert-color: #000 !important;
-  --text-color: #555555 !important;
-  --textSecond-color: #FFF !important;
-  --textThird-color: #555555 !important;
-  --border-color: #ddd !important;
-  --borderSecond-color: #EAEAEA !important;
-  --shadow-color: #ddd !important;
-  --highlighted-color: #00AAA0 !important;
-  --highlighted-dark-color: #00726b !important;
-  --warning-color: #FF6347 !important;
-}
-
 .overlay {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: var(--base-invert-color);
+  background: var(--base-invert-color, #000);
   opacity: 0.3;
   transition: opacity 0.5s;
 }
