variable and identifier renamings; added some gesture popup functionality

--- a/src/ui/css/content.css
+++ b/src/ui/css/content.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "firefox-gesture-arrows";
+  src: url("/res/fonts/arrows.woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html, body {
   height: 100%;
 }
