--- a/src/ui/css/modules/command-bar.css
+++ b/src/ui/css/modules/command-bar.css
@@ -197,7 +197,7 @@
 
 /* special input stylings */
 
-.cb-setting input:not([type="checkbox"]), .cb-setting select {
+.cb-setting input:not([type="checkbox"]), .cb-setting select, .cb-setting textarea {
   width: 100%;
   margin-top: 10px;
 }
